--- a/Frontend/Frontend/wwwroot/index.html
+++ b/Frontend/Frontend/wwwroot/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="Frontend.styles.css" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+
+
 
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
