--- a/Frontend/Core/wwwroot/index.html
+++ b/Frontend/Core/wwwroot/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="Core.styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://unpkg.com/photo-sphere-viewer/dist/photo-sphere-viewer.css" />
+    <script src="https://unpkg.com/uevent"></script>
+    <script src="https://unpkg.com/three/build/three.min.js"></script>
+    <script src="https://unpkg.com/photo-sphere-viewer/dist/photo-sphere-viewer.js"></script>
 
 
 
