--- a/Frontend/Core/wwwroot/index.html
+++ b/Frontend/Core/wwwroot/index.html
@@ -12,7 +12,7 @@
 
 
 
-
+    <script src="js/calendar.js"></script>
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
@@ -20,7 +20,7 @@
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app">.</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
