--- a/Frontend/Core/wwwroot/index.html
+++ b/Frontend/Core/wwwroot/index.html
@@ -15,8 +15,10 @@
     <script src="https://unpkg.com/three/build/three.min.js"></script>
     <script src="https://unpkg.com/photo-sphere-viewer/dist/photo-sphere-viewer.js"></script>
 
-
+    <script src="js/map.js"></script>
     <script src="js/calendar.js"></script>
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
